--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -20,7 +20,13 @@ registrationapp.patient.name.label=Name
 registrationapp.patient.name.question=What's the patient's name?
 
 registrationapp.patient.phone.label=Phone Number
-registrationapp.patient.phone.question=What's the patient phone number?
+registrationapp.patient.phone.question=What's the patient landline phone number?
+
+registrationapp.patient.mobilephone.label= Mobile Phone Number
+registrationapp.patient.mobilephone.question=What's the patient mobile phone number?
+
+registrationapp.patient.alternatephone.label=Alternate Phone Number
+registrationapp.patient.alternatephone.question=What's the patient alternate phone number?
 
 registrationapp.createdPatientMessage=Created Patient Record: {0}
 
@@ -29,7 +35,18 @@ registrationapp.patient.birthdate.question=What's the patient's birth date?
 
 registrationapp.patient.gender.question=What's the patient's gender?
 
+registrationapp.patient.religion.label=Religion
+registrationapp.patient.religion.question=What is the patient's religion?
+
+registrationapp.patient.socialstatus.label=Social Status
+registrationapp.patient.socialstatus.question=What is the patient's social status?
+
+registrationapp.patient.occupation.label=Occupation
+registrationapp.patient.occupation.question=What is the patient's occupation?
+
 registrationapp.patient.contactInfo.label=Contact Info
+
+registrationapp.patient.personalInfo.label=Personal Info
 
 registrationapp.patient.address.question=What is the patient's address?
 registrationapp.patient.address=Address
