--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -28,6 +28,9 @@ registrationapp.patient.mobilephone.question=What's the patient mobile phone num
 registrationapp.patient.alternatephone.label=Alternate Phone Number
 registrationapp.patient.alternatephone.question=What's the patient alternate phone number?
 
+registrationapp.patient.emailid.label=E-Mail ID
+registrationapp.patient.emailid.question=What's the patient e-mail id?
+
 registrationapp.createdPatientMessage=Created Patient Record: {0}
 
 registrationapp.patient.birthdate.label=Birthdate
