US10118-Vaccine Info

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -33,13 +33,75 @@ registrationapp.patient.emailid.question=What's the patient e-mail id?
 
 registrationapp.createdPatientMessage=Created Patient Record: {0}
 
-registrationapp.patient.birthdate.label=Birthdate
+registrationapp.patient.birthdate.label=Birth date
 registrationapp.patient.birthdate.question=What's the patient's birth date?
 
 registrationapp.patient.gender.question=What's the patient's gender?
 
 registrationapp.patient.religion.label=Religion
 registrationapp.patient.religion.question=What is the patient's religion?
+
+registrationapp.patient.BCG.question=Date of BCG Vaccine:
+registrationapp.patient.HepB1.question=Date of Hepatitis B(1st dose):
+registrationapp.patient.OPV1.question=Date of Oral Polio(1st dose):
+registrationapp.patient.DPT1.question=Date of DPT(1st Dose):
+registrationapp.patient.OPV2.question=Date of Oral Polio(2nd dose):
+registrationapp.patient.HepB2.question=Date of Hepatitis B(2nd dose):
+registrationapp.patient.Hib1.question=Date of Hib(1st dose):
+registrationapp.patient.DPT2.question=Date of DPT(2nd dose):
+registrationapp.patient.OPV3.question=Date of Oral Polio(3rd dose):
+registrationapp.patient.Hib2.question=Date of Hib(2nd dose):
+registrationapp.patient.DPT3.question=Date of DPT(3rd dose):
+registrationapp.patient.OPV4.question=Date of Oral Polio(4th dose):
+registrationapp.patient.Hib3.question=Date of Hib(3rd dose):
+registrationapp.patient.OPV5.question=Date of Oral Polio(5th dose):
+registrationapp.patient.HepB3.question=Date of Hepatitis B(3rd dose):
+registrationapp.patient.measles.question=Date of Measles Vaccine:
+registrationapp.patient.MMR.question=Date of MMR Vaccine:
+registrationapp.patient.DPT1b.question=Date of DPT(1st booster dose):
+registrationapp.patient.OPV6.question=Date of Oral Polio(6th dose):
+registrationapp.patient.DPT2b.question=Date of DPT(2nd booster dose):
+registrationapp.patient.OPV7.question=Date of Oral Polio(7th dose):
+registrationapp.patient.TT3b.question=Date of TT(3rd booster dose):
+registrationapp.patient.TT4b.question=Date of TT(4th booster dose):
+registrationapp.patient.typhoid.question=Date of Typhoid Vaccine:
+registrationapp.patient.chickenpox.question=Date of Chicken Pox Vaccine:
+registrationapp.patient.HepA1.question=Date of Hepatitis A(1st dose):
+registrationapp.patient.HepA2.question=Date of Hepatitis A(2nd dose):
+registrationapp.patient.covid191.question=Date of COVID-19(1st dose):
+registrationapp.patient.covid192.question=Date of COVID-19(2nd dose):
+registrationapp.patient.covid19b.question=Date of COVID-19(Booster dose):
+
+registrationapp.patient.BCG.label=BCG
+registrationapp.patient.HepB1.label=Hepatitis B - 1st dose
+registrationapp.patient.OPV1.label=Oral Polio Vaccine - 1st dose
+registrationapp.patient.DPT1.label=DPT - 1st Dose
+registrationapp.patient.OPV2.label=Oral Polio Vaccine - 2nd dose
+registrationapp.patient.HepB2.label=Hepatitis B - 2nd dose
+registrationapp.patient.Hib1.label=Hib - 1st dose
+registrationapp.patient.DPT2.label=DPT - 2nd dose
+registrationapp.patient.OPV3.label=Oral Polio - 3rd dose
+registrationapp.patient.Hib2.label=Hib - 2nd dose
+registrationapp.patient.DPT3.label=DPT - 3rd dose
+registrationapp.patient.OPV4.label=Oral Polio - 4th dose
+registrationapp.patient.Hib3.label=Hib - 3rd dose
+registrationapp.patient.OPV5.label=Oral Polio - 5th dose
+registrationapp.patient.HepB3.label=Hepatitis B - 3rd dose
+registrationapp.patient.measles.label=Measles
+registrationapp.patient.MMR.label=MMR
+registrationapp.patient.DPT1b.label=DPT - 1st booster dose
+registrationapp.patient.OPV6.label=Oral Polio - 6th dose
+registrationapp.patient.DPT2b.label=DPT - 2nd booster dose
+registrationapp.patient.OPV7.label=Oral Polio - 7th dose
+registrationapp.patient.TT3b.label=TT (Tetanus) - 3rd booster dose
+registrationapp.patient.TT4b.label=TT (Tetanus) - 4th booster dose
+registrationapp.patient.typhoid.label=Typhoid
+registrationapp.patient.chickenpox.label=Chicken Pox
+registrationapp.patient.HepA1.label=Hepatitis A - 1st dose
+registrationapp.patient.HepA2.label=Hepatitis A - 2nd dose
+registrationapp.patient.covid191.label=COVID-19 1st dose
+registrationapp.patient.covid192.label=COVID-19 2nd dose
+registrationapp.patient.covid19b.label=COVID-19 Booster dose
 
 registrationapp.patient.socialstatus.label=Social Status
 registrationapp.patient.socialstatus.question=What is the patient's social status?
@@ -50,6 +112,8 @@ registrationapp.patient.occupation.question=What is the patient's occupation?
 registrationapp.patient.contactInfo.label=Contact Info
 
 registrationapp.patient.personalInfo.label=Personal Info
+
+registrationapp.patient.vaccineInfo.label=Vaccination Info
 
 registrationapp.patient.address.question=What is the patient's address?
 registrationapp.patient.address=Address
